--- a/css/content/typography.scss
+++ b/css/content/typography.scss
@@ -1,22 +1,31 @@
-h3 {
+h2, h3, h4, h5 {
 	font-family: $title-font;
-	font-size: 1.4em;
 	font-weight: 600;
 	color: $feat-grey;
-	margin: 20px 0 20px 0;
 }
 
 h2.header {
-	font-family: $title-font;
-	font-weight: 600;
 	font-size: 35px;
-	color: $feat-grey;
 	text-transform: uppercase;
 	text-align: center;
 	margin: 10px 0 15px 0;
 	@media(min-width: $tablet) {
 		margin: 20px 0 30px 0px;
 	}
+}
+
+h3 {
+	font-size: 1.4em;
+	margin: 20px 0 20px 0;
+}
+
+h4 {
+	font-size: 1.15em;
+	margin: 10px 0 10px 0;
+}
+
+h5 {
+	font-size: 1em;
 }
 
 p {
@@ -50,4 +59,8 @@ p {
 	color: white;
 	background-color: $main-color;
 	padding: 20px;
+}
+
+.certificado {
+	font-weight: bold;
 }
