--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@
 
 @import 'global/global';
 
+@import 'layout/about-container';
 @import 'layout/benefits-container';
 @import 'layout/parallax';
 @import 'layout/slogan';
