--- a/css/layout/about-container.scss
+++ b/css/layout/about-container.scss
@@ -1,9 +1,17 @@
+.about-container {
+    
+    p {
+        font-size: 20px;
+    }
+}
+
 .about-img {
     display: flex;
     align-items: center;
+    
     img {
         zoom: 0.35;
         // margin: 20px 0 30px;
         padding: 5%;
-    }   
+    }       
 }
