--- a/css/layout/about-container.scss
+++ b/css/layout/about-container.scss
@@ -1,17 +1,24 @@
 .about-container {
     
     p {
-        font-size: 20px;
+        font-size: 16px;
+        line-height: 1.7;
     }
 }
 
 .about-img {
     display: flex;
     align-items: center;
+    flex-direction: column;
     
     img {
+        padding: 0 5%;
+        width: 100%;
         zoom: 0.35;
         // margin: 20px 0 30px;
-        padding: 5%;
+        @media(min-width: $tablet){
+            padding: 5%;
+        }
     }       
 }
+
