--- a/css/variaveis.scss
+++ b/css/variaveis.scss
@@ -20,6 +20,7 @@ $parallax-font: 'Open Sans';
 // MEDIA-QUERIES
 
 $iPhone: 320px;
+$phoneM: 375px;
 $phone: 425px;
 $tablet: 768px;
 $desktop: 992px;
