--- a/css/layout/about-container.scss
+++ b/css/layout/about-container.scss
@@ -10,6 +10,10 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+
+    @media(min-width: $tablet) {
+        flex-direction: row;
+    }
     
     img {
         padding: 0 5%;
@@ -17,7 +21,9 @@
         zoom: 0.35;
         // margin: 20px 0 30px;
         @media(min-width: $tablet){
-            padding: 5%;
+            padding: 0;
+            margin: 1px;
+            width: 45%;
         }
     }       
 }
