--- a/css/content/contact.scss
+++ b/css/content/contact.scss
@@ -7,6 +7,7 @@
 	text-align: left;
 	@media(min-width: $tablet) {
 		width: 80%;
+		margin: 0 10%;
 	}
 }
 
@@ -18,6 +19,7 @@
 		border: 1px solid $border;
 		border-radius: 6px;
 		width: 80%;
+		margin: 0 10%;
 	}
 }
 
