--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,8 @@
   text-align: left; }
   @media (min-width: 768px) {
     .contact-infos {
-      width: 80%; } }
+      width: 80%;
+      margin: 0 10%; } }
 
 @media (min-width: 768px) {
   .contact-item {
@@ -75,7 +76,8 @@
     background-color: whitesmoke;
     border: 1px solid #ddd;
     border-radius: 6px;
-    width: 80%; } }
+    width: 80%;
+    margin: 0 10%; } }
 
 @media (min-width: 768px) {
   #gform {
