--- a/css/layout/about-container.scss
+++ b/css/layout/about-container.scss
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-
+        
     @media(min-width: $tablet) {
         flex-direction: row;
     }
@@ -19,12 +19,12 @@
         padding: 0 5%;
         width: 100%;
         zoom: 0.35;
+        margin: 2.5% 0;
         // margin: 20px 0 30px;
         @media(min-width: $tablet){
             padding: 0;
-            margin: 1px;
+            margin: 2.5%;
             width: 45%;
         }
     }       
 }
-
