--- a/css/navigation/footer.scss
+++ b/css/navigation/footer.scss
@@ -24,6 +24,7 @@ footer {
 	@media(min-width: $tablet) {
 		display: flex;	
 		flex-direction: column;
+		margin-left: 100px;
 	}
 	p {
 		font-size: 1.2em;
@@ -36,6 +37,11 @@ footer {
 	}
 }
 
+.footer-nav-link {
+	text-decoration: none;
+	color: #fff;
+}
+
 
 .foot-contact p {
 	padding: 0px;
@@ -45,7 +51,7 @@ footer {
 .foot-social {
 	display: flex;
 	justify-content: space-around;
-	margin: 30px 40px 0 40px;
+	margin: 30px 0 0 0;
 
 	@media(min-width: $tablet) {
 		// flex-direction: row;
