--- a/css/style.css
+++ b/css/style.css
@@ -582,7 +582,8 @@ footer {
   @media (min-width: 768px) {
     .foot-links {
       display: flex;
-      flex-direction: column; } }
+      flex-direction: column;
+      margin-left: 100px; } }
   .foot-links p {
     font-size: 1.2em;
     text-transform: uppercase;
@@ -592,6 +593,10 @@ footer {
         flex-direction: row;
         margin: 10px 20px; } }
 
+.footer-nav-link {
+  text-decoration: none;
+  color: #fff; }
+
 .foot-contact p {
   padding: 0px;
   margin: 0px; }
@@ -599,7 +604,7 @@ footer {
 .foot-social {
   display: flex;
   justify-content: space-around;
-  margin: 30px 40px 0 40px; }
+  margin: 30px 0 0 0; }
   @media (min-width: 768px) {
     .foot-social {
       width: 250px;
